[package]
name = "karamapper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
derive_more = { version = "1.0.0", features = ["display"] }
pretty_assertions = "1.4.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
strum = { version = "0.26.3", features = ["derive"] }
toml = "0.8.19"
