[package]
name = "karamapper"
version = "0.1.0"
edition = "2021"
description = "Tool to create keymapping for kerabiner-elements"
keywords = ["karabiner", "keymapping", "keyboard", "macos", "cli"]
repository = "https://github.com/Pascal736/karamapper"
license = "MIT"
readme = "README.md"
authors = ["Pascal Pfeiffer <PaPfeiffer@proton.me>"]

[[bin]]
name = "karamapper"
path = "src/cli.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["display"] }
pretty_assertions = "1.4.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
strum = { version = "0.26.3", features = ["derive"] }
toml = "0.8.19"
